kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/typechecher_tests/valid/030_requireEcoreUsingGenerics.kmt
/* $Id: 030_requireEcoreUsingGenerics.kmt,v 1.1 2009-02-20 08:19:20 dvojtise Exp $ 
 * Creation : February 19, 2009
 * Licence  : EPL 
 * Copyright:
 * Authors  : 
 *            dvojtise
 */
@mainClass "pbGenericFranck::Main"
@mainOperation "main"


package pbGenericFranck;


require kermeta
require "030_required_ecore/UseGenerics.ecore"

class Main
{
	operation main() : Void is do 
		// TODO: implement 'main' operation
	end
}