kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/typechecher_tests/invalid/parserError10.kmt
/* $Id: parserError10.kmt,v 1.1 2008-01-14 10:50:14 dvojtise Exp $
 * Creation date: January 10, 2008
 * License:
 * Copyright:
 * Authors:
 *  the parser must fail on that file
 * see bug #4768
 * introduce a parser error in operation
 */
@mainClass "root_package::Main"
@mainOperation "main"



package root_package;




require kermeta

using kermeta::language::structure
using kermeta::standard

class Main 
{
	operation main() : Void is do
		; 
	end
}
